# custom-cv-lib

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
custom_cv/: base.py  splitters.py  stats.py  visualizations.py
examples/: example_spatial.py  example_stratified.py  example_timeseries.py
src/custom_cv/: __init__.py  splitters.py  visualizations.py
src/tests/: test_splitters.py
